--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
   }
 
 </style>
+<script>
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-7421972-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
 </head>
 <body>
 <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
