--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
       
     </div>
   </div>
+
+  <div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- ブログ用 -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4256922354669479"
+         data-ad-slot="4329520501"
+         data-ad-format="auto"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
